[package]
name = "uhlersoth"
description = "z-machine tools"
version = "0.1.0"
authors = ["crawlingChaos"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/crawlingChaos/uhlersoth"
repository = "https://github.com/crawlingChaos/uhlersoth"
readme = "README.md"

[dependencies]
